force-app/main/default/objects/Data_Template__c/fields/Attachment_Options__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Options__c</fullName>
    <inlineHelpText>Insert, update or remove attachments of the records that will get deployed.</inlineHelpText>
    <label>Attachment Actions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Attachments</fullName>
                <default>true</default>
                <label>No Actions</label>
            </value>
            <value>
                <fullName>Insert Attachments</fullName>
            </value>
            <value>
                <fullName>Replace Attachments</fullName>
            </value>
            <value>
                <fullName>Remove Attachments</fullName>
            </value>
            <value>
                <fullName>Upsert Attachments</fullName>
                <isActive>false</isActive>
                <label>Upsert Attachments</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>