force-app/main/default/objects/Data_Template__c/fields/Match_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Match_Record_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When matching record types, the records in the target Credential are assigned to the same record type as in the source Credential, if found. Otherwise they are assigned to the default record type in the deploying user&apos;s profile.</inlineHelpText>
    <label>Match Record Type</label>
    <type>Checkbox</type>
</CustomField>