force-app/main/default/objects/Data_Template__c/fields/Template_Source_Org__c.field-meta.xml
<CustomField>
    <fullName>Template_Source_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The main objects, fields and related objects will be listed based on the Salesforce Org data model of the selected credential. The Salesforce user linked to the credential must have access to all the fields and objects necessary for your deployments.</inlineHelpText>
    <label>Template Schema Credential</label>
    <referenceTo>Org__c</referenceTo>
    <relationshipLabel>Data Templates</relationshipLabel>
    <relationshipName>Data_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>